--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Enable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Enable.cshtml
@@ -7,6 +7,18 @@
     ViewBag.ControllerName = "Empleados";
 }
 
+@section estilos
+{
+
+    <style>
+        .profile-picture {
+            width: 300px;
+            height: 300px;
+        }
+    </style>
+
+}
+
 <div class="right_col" role="main">
     <div class="">
         <div class="page-title">
