--- a/CódigoFuente/BitacorasProduccion/Views/empleados/Disable.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/empleados/Disable.cshtml
@@ -15,6 +15,13 @@
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
 
+    <style>
+        .profile-picture {
+            width: 300px;
+            height: 300px;
+        }
+    </style>
+
 }
 
 <div class="right_col" role="main">
@@ -43,6 +50,18 @@
                                     <div id="crop-avatar">
                                         <!-- Current avatar -->
                                         <img class="img-responsive avatar-view profile-picture" src="@Model.ImageToBase64()" alt="Avatar" title="Change the avatar">
+                                    </div>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="item form-group">
+                                @Html.LabelFor(model => model.id_fotografia, new { @class = "col-form-label col-md-3 col-sm-3 label-align" })
+                                <div class="col-md-4 col-sm-4 ">
+                                    <div id="crop-avatar">
+                                        <!-- Current avatar -->
+                                        <img class="img-responsive avatar-view profile-picture" src="/Content/images/user.png" alt="Avatar" title="Change the avatar">
                                     </div>
                                 </div>
                             </div>
